--- a/index.htm
+++ b/index.htm
@@ -28,7 +28,7 @@
         <div class="container hero-banner">
             <div class="images">
                 <div class="logo-wrapper">
-                    <img class="my-float" id="hero-banner-logo" src="/logo-gbdm.png" alt="">
+                    <img class="my-float" id="hero-banner-logo" src="logo-gbdm.png" alt="">
                     <a class="pixel-button" href="#introduce">KHÁM PHÁ</a>
 
                 </div>
@@ -137,3 +137,4 @@
     <script src="animation.js"></script>
 
 </html>
+
