--- a/index.htm
+++ b/index.htm
@@ -33,11 +33,11 @@
 
                 </div>
                 <div class="cloud-1-wrapper">
-                    <img class="my-float2" id="hero-banner-cloud1" src="/img/cloud-1.png" alt="">
+                    <img class="my-float2" id="hero-banner-cloud1" src="cloud-1.png" alt="">
 
                 </div>
                 <div class="cloud-2-wrapper">
-                    <img class="my-float2" id="hero-banner-cloud2" src="/img/cloud-2.png" alt="">
+                    <img class="my-float2" id="hero-banner-cloud2" src="cloud-2.png" alt="">
 
                 </div>
             </div>
@@ -52,28 +52,28 @@
         <div class="container has-global-padding has-vertical-padding">
             <div class="gallery scroll-float">
                 <div class="item">
-                    <img src="img\product image\product-image-1.png" alt="">
+                    <img src="product-image-1.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-2.png" alt="">
+                    <img src="product-image-2.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-3.png" alt="">
+                    <img src="product-image-3.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-4.png" alt="">
+                    <img src="product-image-4.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-5.png" alt="">
+                    <img src="product-image-5.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-6.png" alt="">
+                    <img src="product-image-6.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-7.png" alt="">
+                    <img src="product-image-7.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="img\product image\product-image-8.png" alt="">
+                    <img src="product-image-8.png" alt="">
                 </div>
             </div>
         </div>
@@ -96,8 +96,8 @@
 
             <div class="category-banners scroll-float">
                 <div class="slides">
-                    <a href="#" class="banner"><img src="img/category-banner-1.png" alt=""></a>
-                    <a href="#" class="banner"><img src="img/category-banner-2.png" alt=""></a>
+                    <a href="#" class="banner"><img src="category-banner-1.png" alt=""></a>
+                    <a href="#" class="banner"><img src="category-banner-2.png" alt=""></a>
                 </div>
 
                 <div class="dots"></div>
@@ -111,7 +111,7 @@
             <h1 class="pixel-text">Contacts</h1>
             <div class="contact">
                 <div class="contact-image">
-                    <img src="img\contact-image_1.png" alt="">
+                    <img src="contact-image_1.png" alt="">
                 </div>
                 <div class="contact-detail">
                     <h3 class="pixel-text">Liên hệ ngay nếu:</h3>
@@ -137,4 +137,5 @@
     <script src="animation.js"></script>
 
 </html>
+
 
