--- a/thong-diep.htm
+++ b/thong-diep.htm
@@ -31,14 +31,14 @@
          <div class="container hero-banner">
             <div class="images">
                 <div class="logo-wrapper">
-                    <img class="my-float" id="hero-banner-logo" src="/img/logo-gbdm.png" alt="">
+                    <img class="my-float" id="hero-banner-logo" src="logo-gbdm.png" alt="">
                 </div>
                 <div class="cloud-1-wrapper">
-                    <img class="my-float2" id="hero-banner-cloud1" src="/img/cloud-1.png" alt="">
+                    <img class="my-float2" id="hero-banner-cloud1" src="cloud-1.png" alt="">
 
                 </div>
                 <div class="cloud-2-wrapper">
-                    <img class="my-float2" id="hero-banner-cloud2" src="/img/cloud-2.png" alt="">
+                    <img class="my-float2" id="hero-banner-cloud2" src="cloud-2.png" alt="">
 
                 </div>
             </div>
@@ -110,7 +110,7 @@
             <h1 class="pixel-text">Contacts</h1>
             <div class="contact">
                 <div class="contact-image">
-                    <img src="img\contact-image_1.png" alt="">
+                    <img src="contact-image_1.png" alt="">
                 </div>
                 <div class="contact-detail">
                     <h3 class="pixel-text">Liên hệ ngay nếu:</h3>
@@ -136,4 +136,5 @@
 <style>
     /* header{background-color: white;} */
 </style>
+
     </body>
