--- a/index.htm
+++ b/index.htm
@@ -16,10 +16,10 @@
             <div class="nav">
                 <a href="/index.htm" class="">Home</a>
                 <!-- <a href="" class="">Giới thiệu</a> -->
-                <a href="" class="">Sản phẩm</a>
+                <a href="/products.htm" class="">Sản phẩm</a>
                 <a href="" class="">Ebook</a>
                 <a href="" class="">Review</a>
-                <a href="" class="">Sáng tạo</a>
+                <a href="/sang-tao.htm" class="">Sáng tạo</a>
                 <a href="/thong-diep.htm" class="">Thông điệp</a>
                 <a href="/index.htm#contact" class="">Contact</a>
 
@@ -96,12 +96,12 @@
 
             <div class="category-banners scroll-float">
                 <div class="slides">
-                    <a href="#" class="banner"><img src="category-banner-1.png" alt=""></a>
-                    <a href="#" class="banner"><img src="category-banner-2.png" alt=""></a>
+                    <a href="#" class="banner"><img src="img/category-banner-1.png" alt=""></a>
+                    <a href="#" class="banner"><img src="img/category-banner-2.png" alt=""></a>
                 </div>
 
                 <div class="dots"></div>
-                    <a href="" class="pixel-button">Tất cả sản phẩm</a>
+                    <a href="/products.htm" class="pixel-button">Tất cả sản phẩm</a>
                 </div>
         </div>
 
@@ -111,7 +111,7 @@
             <h1 class="pixel-text">Contacts</h1>
             <div class="contact">
                 <div class="contact-image">
-                    <img src="contact-image_1.png" alt="">
+                    <img src="img\contact-image_1.png" alt="">
                 </div>
                 <div class="contact-detail">
                     <h3 class="pixel-text">Liên hệ ngay nếu:</h3>
@@ -135,7 +135,4 @@
          </div>
     </body>
     <script src="animation.js"></script>
-
 </html>
-
-
