--- a/thong-diep.htm
+++ b/thong-diep.htm
@@ -17,10 +17,10 @@
             <div class="nav">
                 <a href="/index.htm" class="">Home</a>
                 <!-- <a href="" class="">Giới thiệu</a> -->
-                <a href="" class="">Sản phẩm</a>
+                <a href="/products.htm" class="">Sản phẩm</a>
                 <a href="" class="">Ebook</a>
                 <a href="" class="">Review</a>
-                <a href="" class="">Sáng tạo</a>
+                <a href="/sang-tao.htm" class="">Sáng tạo</a>
                 <a href="" class="">Thông điệp</a>
                 <a href="#contact" class="">Contact</a>
 
@@ -110,7 +110,7 @@
             <h1 class="pixel-text">Contacts</h1>
             <div class="contact">
                 <div class="contact-image">
-                    <img src="contact-image_1.png" alt="">
+                    <img src="img\contact-image_1.png" alt="">
                 </div>
                 <div class="contact-detail">
                     <h3 class="pixel-text">Liên hệ ngay nếu:</h3>
@@ -136,5 +136,4 @@
 <style>
     /* header{background-color: white;} */
 </style>
-
     </body>
